@@ -1,6 +1,7 @@
 229
 
 - Strip trailing whitespace when redirecting standard output streams to log
+- Add OpenTelemetry tracing module
 - Add openmetrics and security-jwks to BOM
 - Add getProperty method to AbstractConfigurationAwareModule
 - Fix HTTP client request size statistic
